--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -1,7 +1,15 @@
+:root {
+  --color-base-bg: rgb(250, 250, 250);
+  --bg-image: url(https://images.pexels.com/photos/2114014/pexels-photo-2114014.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&dpr=1) center/cover;
+  --color-btn-bg: rgb(220, 220, 220);
+  --color-div-bg: rgba(238, 243, 245, 0.493);
+  --color-div-text: white;
+  --color-icon: white;
+}
+
 :root.light {
-    --border-btn: 1px solid rgb(36, 36, 36);
     --color-base-bg: rgb(250, 250, 250);
-    --bg-image: url(../dist/dcfac7ae323295903005.jpg) center/cover;
+    --bg-image: url(https://images.pexels.com/photos/2114014/pexels-photo-2114014.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1280&dpr=1) center/cover;
     --color-btn-bg: rgb(220, 220, 220);
     --color-div-bg: rgba(238, 243, 245, 0.493);
     --color-div-text: white;
@@ -9,10 +17,9 @@
 }
 
 :root.dark {
-      --bg-image: url(../dist/82d5c7b4331754355fd0.jpg) center/cover;
+      --bg-image: url(https://images.pexels.com/photos/4737484/pexels-photo-4737484.jpeg?auto=compress&cs=tinysrgb&w=1920&h=1275&dpr=1) center/cover;
       --border-btn: 1px solid rgb(220, 220, 220);
       --color-base-bg :  #313c47;
-      --color-btn-bg: rgb(36, 36, 36);
       --color-div-bg: rgba(67, 67, 85, 0.493);
       --color-div-text: white;
       --color-icon: #8d8c8c;
@@ -26,7 +33,7 @@
 
 .weather-app-body {
         background: var(--color-div-bg);
-        --color-div-text: white;
+        color: var(--color-div-text);
 
 }
 
@@ -39,3 +46,5 @@
       padding: 10px;
     }
   
+
+
