--- a/src/mobile.css
+++ b/src/mobile.css
@@ -1,3 +1,34 @@
-@media only screen and (min-width: 360px) {
+@media only screen and (max-width: 760px) {
 
+    body {
+        height: 100vh;
+        background-repeat: no-repeat;
+        height: max-content;
+    }
+
+    .title {
+        font-size: 1.1em;
+    }
+
+    .loupe {
+        width: 40%;
+        height: 40%;
+        cursor: pointer;
+        position: absolute;
+        bottom: 12px;
+        right: -30px;
+    }
+    
+    .nav-icon {
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+    }
+    
+    .weather-app-body {
+        margin-top: 50px;
+        width: 90%;
+        height: 480px;
+        border-radius: 15px;
+    }    
 }
