--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,9 @@
 }
 
 body {
-    /* height: 100vh; */
+    height: 100vh;
+    background-repeat: no-repeat;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -75,13 +77,13 @@ input[type = "text"] {
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    gap: 40px;
+    gap: 10%;
 }
 
 .weather-app-body {
     margin-top: 50px;
     width: 400px;
-    height: 450px;
+    height: 480px;
     border-radius: 15px;
     /* background: #444444; */
 }
@@ -118,7 +120,7 @@ input[type = "text"] {
     gap: 20px;
 }
 
-.sun, .cloud, .fog, .snow, .rain, .thunder{
+.sun, .cloud, .fog, .snow, .rain, .thunder, .error-icon{
     width: 200px;
     height: 200px;
 }
@@ -135,9 +137,10 @@ input[type = "text"] {
     fill: rgba(117, 90, 90, 0.877);
 }
 
-.rain {
+.rain, .error-icon {
     fill: white;
 }
+
 
 .sun-course {
     display: flex;
