--- a/src/mobile.css
+++ b/src/mobile.css
@@ -5,17 +5,20 @@
         background-repeat: no-repeat;
     }
 
+    .nav-bar {
+        width: 90%;
+    }
     .title {
-        font-size: 1.1em;
+        font-size: 2.1em;
     }
 
     .loupe {
-        width: 40%;
-        height: 40%;
+        width: 60%;
+        height: 60%;
         cursor: pointer;
         position: absolute;
-        bottom: 12px;
-        right: -30px;
+        bottom: 4px;
+        right: 5px;
     }
     
     .nav-icon {
@@ -30,4 +33,9 @@
         height: 480px;
         border-radius: 15px;
     }    
+
+    .sidenav {
+        background: var(--sidenav-mobile-bg);
+        color: var(--sidenav-mobile-color); 
+    }
 }
