--- a/src/style.css
+++ b/src/style.css
@@ -229,7 +229,9 @@ input[type = "text"] {
         display: block;
         width: 35px;
         height: 5px;
-        background-color: rgb(174, 174, 235);
+        /* background-color: rgb(174, 174, 235); */
+        background-color: var(--burger-color);
+        /* background-color: #fea36c; */
         margin: 6px 0;
   }
   
